add vendor controller and all view pages for vendor

--- a/VendorTracker/Views/Order/Show.cshtml
+++ b/VendorTracker/Views/Order/Show.cshtml
@@ -9,3 +9,6 @@
 <h4>Description: @Model["order"].Description</h4>
 <h4>Total Price: @Model["order"].Price</h4>
 <h4>Date Ordered: @Model["order"].Date</h4>
+
+<a href='/vendors/@Model["vendor"].Id/orders/new'>Add a new Order!</a>
+<a href="/vendors">Back list of Vendors</a>
