add basic styling to html pages

--- a/VendorTracker/Views/Home/Index.cshtml
+++ b/VendorTracker/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
-@{
-  Layout = "_Layout";
-}
+<link rel="stylesheet" type="text/css" href="~/css/styles.css" />
 
-<h1>Welcome to Pierre's Bakery!</h1>
-<h3><a href='/vendors'>View Vendors</a></h3>
-<h3><a href='/vendors/new'>Add a new Vendor!</a></h3>
+<body>
+  <h1>Welcome to Pierre's Bakery!</h1>
+  <h3><a href='/vendors'>View Vendors</a></h3>
+  <h3><a href='/vendors/new'>Add a new Vendor!</a></h3>
+</body>
