--- a/VendorTracker/Views/Orders/DeleteAll.cshtml
+++ b/VendorTracker/Views/Orders/DeleteAll.cshtml
@@ -1,6 +1,6 @@
-@{
-  Layout = "_Layout";
-}
+<link rel="stylesheet" type="text/css" href="~/css/styles.css" />
 
-<h1>Your orders has been cleared!</h1>
-<p><a href="/orders">Back to orders.</a></p>
+<body>
+  <h1>Your orders has been cleared!</h1>
+  <p><a href="/orders">Back to orders.</a></p>
+</body>
