--- a/VendorTracker/Views/Orders/New.cshtml
+++ b/VendorTracker/Views/Orders/New.cshtml
@@ -1,22 +1,23 @@
-@{
-  Layout = "_Layout";
-}
+<link rel="stylesheet" type="text/css" href="~/css/styles.css" />
 
-<h1>Add a new order to @Model.Name</h1>
+<body>
 
-<form action="/vendors/Model.Id/orders" method="post">
-  <input id="vendorId" name="vendorId" type="hidden" value="@Model.Id">
-  <label for="title">Title for the Order</label>
-  <input for="title" name="title" type="text">
+  <h1>Add a new order to @Model.Name</h1>
 
-  <label for="description">Description of the Order</label>
-  <input id="description" name="description" type="text">
-
-  <label for="price">Total Price</label>
-  <input id="price" name="price" type="number">
-
-  <label for="date">Date of Order</label>
-  <input id="date" name="date" type="date">
-
-  <button type="submit">Add Order!</button>
-</form>
+  <form action="/vendors/Model.Id/orders" method="post">
+    <input id="vendorId" name="vendorId" type="hidden" value="@Model.Id">
+    <label for="title">Title for the Order</label>
+    <input for="title" name="title" type="text">
+    <br>
+    <label for="description">Description of the Order</label>
+    <input id="description" name="description" type="text">
+    <br>
+    <label for="price">Total Price</label>
+    <input id="price" name="price" type="number">
+    <br>
+    <label for="date">Date of Order</label>
+    <input id="date" name="date" type="date">
+    <br>
+    <button type="submit">Add Order!</button>
+  </form>
+</body>
